# HR

./: .dockerignore  .env.example  .gitignore  CANONICAL_ROUTE_MAP.md  CLAUDE.md  Makefile  QUICK_START.md  README.md  TODO.md  VERIFICATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.sonarqube.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  tsconfig.json
hr_ai_layer/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
hr_ai_layer/.ipynb_checkpoints/: HR_Model_Validation_Lab-checkpoint.ipynb  HR_Model_Validation_Lab_FIXED-checkpoint.ipynb  Untitled-checkpoint.ipynb
hr_ai_layer/configs/: data_contract_attrition_survival_v1.md
hr_ai_layer/scripts/: data_audit.py  prepare_survival_dataset.py
hr_ai_layer/src/hr_ai_layer/audit/: performance_audit.py
hr_ai_layer/src/hr_ai_layer/config/: settings.py
hr_ai_layer/src/hr_ai_layer/data/: INX_Future_Inc_Employee_Performance_CDS_Project2_Data_V1.8.xls  build_survival_horizon_dataset.py  extract_attrition_dataset.py  simulate_hr_academic_panel.py  simulate_hr_behavior.py
hr_ai_layer/src/hr_ai_layer/decision/: performance_decision_engine.py
hr_ai_layer/src/hr_ai_layer/export/: export_models_package.py  export_performance_training_dataset.py  export_production_models_package.py
hr_ai_layer/src/hr_ai_layer/features/: build_performance_dataset_v4.py
hr_ai_layer/src/hr_ai_layer/models/: train_performance_models.py
server/: app.ts  (+9 more)
(+862 files in other folders)
